--- a/Bayesian_smoothing_JSS.tex
+++ b/Bayesian_smoothing_JSS.tex
@@ -83,16 +83,16 @@ Image classification is an key component of remote sensing image analysis. The g
 
 Due to the complexity of remote sensing data, classification algorithms can introduce noise or produce outliers. Spectral responses of ground targets have large variability. Pixels in medium-resolution satellite images, like Landsat or Sentinel-2, often have mixed spectral responses from different land cover types. For these reasons, classifiers produce results that include misclassified pixels, especially in the boundaries between two homogenous ground objects which have different spectral responses. Post-processing methods need to be able to detect and correct such errors.
 
-The fragment of a Sentinel-2 image from the Amazon in Rondonia, Brazil, shown in Figure \ref{fig:roim}, illustrates why post-processing is required for image classification. In the image, one can see the distinction between green forest areas and deforested areas depicted in shades of orange and brown. The border pixels between green forest areas and brown bare soil have mixed responses. In many cases, such mixed pixels will be labelled as a third class which does not occur in this area. Thus, these border pixels are prone to misclassification, which needs to be corrected using suitable post-processing methods.
+The fragment of a Sentinel-2 image from in Rondonia, Brazil, shown in Figure \ref{fig:roim}, illustrates why post-processing is required for image classification. In the image, one can see the distinction between green forest areas and deforested areas depicted in shades of orange and brown. The border pixels between green forest areas and brown bare soil have mixed responses. In many cases, such mixed pixels will be labelled as a third class which does not occur in this area. Thus, these border pixels are prone to misclassification, which needs to be corrected using suitable post-processing methods.
 
 \begin{CodeChunk}
 \begin{figure}[h]
 
-{\centering \includegraphics[width=0.7\linewidth]{images/rondonia_3} 
+{\centering \includegraphics[width=0.8\linewidth]{images/rgb_image} 
 
 }
 
-\caption[Detail of Sentinel-2 image of deforestation in the Amazon forest (source]{Detail of Sentinel-2 image of deforestation in the Amazon forest (source: Sentinel Hub).}\label{fig:roim}
+\caption[Detail of Sentinel-2 image in the Amazon forest]{Detail of Sentinel-2 image in the Amazon forest.}\label{fig:roim}
 \end{figure}
 \end{CodeChunk}
 
@@ -101,6 +101,8 @@ Image classification post-processing methods include Gaussian, semi-global, bila
 The paper introduces a new post-processing algorithm for remote sensing image classification using an Empirical Bayes approach. The algorithm is available in the R package \pkg{bayesEO}. To simulate the impact of discontinuity between land classes, we use non-isotropic neighborhood definitions. Our method allows the inclusion of expert knowledge to enhance the consistency of the resulting map. The \pkg{bayesEO} package can be combined with \pkg{sits}, an end-to-end toolkit for land use and land cover classification using big Earth observation data developed by the authors \citep{Simoes2021}.
 
 Our package adds to other \proglang{R} libraries focused on the spatial data analysis, including \pkg{spdep} \citep{Bivand2023} and \pkg{rgeoda} \citep{Li2022}. \pkg{CARBayes} \citep{Lee2013} implements Bayesian models for spatial areal units. For image processing analysis, \pkg{terra} \citep{Hijmans2023} provides supervised classification with decision trees, while \pkg{stars} \citep{Bivand2023} includes functions for linear regression and random forest classification. For post-processing of machine learning image classification, \pkg{sits} also uses the method described in this paper. As far as we know, no current \proglang{R} package supports post-processing of image classification of remote sensing images. Therefore, the \pkg{bayesEO} is a useful addition to the facilities available in \proglang{R} for remote sensing image processing.
+
+\newpage
 
 \hypertarget{methods}{%
 \section{Methods}\label{methods}}
@@ -131,7 +133,9 @@ For pixel-based classification methods the spatial \(\mathbf{s}_i\) dimension is
 \end{figure}
 \end{CodeChunk}
 
-The main idea behind our post-processing method is that a pixel-based classification should take into account its neighborhood pixels. Consider Figure \ref{fig:mapnosmooth} which shows a class assignment produced by a random forest algorithm. In this case, the resulting classified map has been produced by taking, for each pixel, the class of higher probability produced by the algorithm. The resulting map has many noisy areas with a high spatial variability of class assignments. This happens more frequently in two cases: (a) small clusters of pixels of one class inside a larger area of a different class; (b) transition zones between classes. In general, images of heterogeneous landscapes with high spatial variability have many mixed pixels, whose spectral response combines different types of land cover in a single ground resolved cell. For example, many pixels in the border between areas of classes \code{Forest} and \code{Clear_Cut_Bare_Soil} are wrongly assigned to the \code{Clear_Cut_Vegetation} class. This wrong assignment occurs because these pixels have a mixed response. Inside the ground cell captured by the sensor as a single pixel value, there are both trees and bare soil areas. Such results are undesirable and need to be corrected by post-processing.
+The main idea behind our post-processing method is that a pixel-based classification should take into account its neighborhood pixels. Consider Figure \ref{fig:mapnosmooth} which shows a class assignment produced by a random forest algorithm on a image time series in the area shown in Figure \ref{fig:roim}. The image time series has been classified using the \proglang{R} package \pkg{sits}\citep{Simoes2021}.
+
+The classified map has been produced by taking, for each pixel, the class of higher probability produced by the algorithm. The resulting map has many noisy areas with a high spatial variability of class assignments. This happens more frequently in two cases: (a) small clusters of pixels of one class inside a larger area of a different class; (b) transition zones between classes. In general, images of heterogeneous landscapes with high spatial variability have many mixed pixels, whose spectral response combines different types of land cover in a single ground resolved cell. For example, many pixels in the border between areas of classes \code{Forest} and \code{Clear_Cut_Bare_Soil} are wrongly assigned to the \code{Clear_Cut_Vegetation} class. This wrong assignment occurs because these pixels have a mixed response. Inside the ground cell captured by the sensor as a single pixel value, there are both trees and bare soil areas. Such results are undesirable and need to be corrected by post-processing.
 
 To maintain consistency and coherence in our class representations, we should minimise small variations or misclassifications. We incorporate spatial coherence as a post-processing step to accomplish this. The probabilities associated with each pixel will change based on statistical inference, which depends on the values for each neighbourhood. Using the recalculated probabilities for each pixel, we get a better version of the final classified map.
 
@@ -146,13 +150,12 @@ To maintain consistency and coherence in our class representations, we should mi
 \end{figure}
 \end{CodeChunk}
 
-Consider Figure \ref{fig:mapsmooth}, which is the result ofBayesian smoothing on the random forest algorithm outcomes. The noisy border pixels between two large areas of the same class have been removed. We have also removed small clusters of pixels belonging to one class inside larger areas of other classes. The outcome is a more uniform map, like the ones created through visual interpretation or object-based analysis. Details like narrow vegetation corridors or small forest roads might be missing in the smoothed image. However, the improved spatial consistency of the final map compensates for such losses, due to the removal of misclassified pixels that have mixed spectral responses.
+Consider Figure \ref{fig:mapsmooth}, which is the result of Bayesian smoothing on the random forest algorithm outcomes. The noisy border pixels between two large areas of the same class have been removed. We have also removed small clusters of pixels belonging to one class inside larger areas of other classes. The outcome is a more uniform map, like the ones created through visual interpretation or object-based analysis. Details like narrow vegetation corridors or small forest roads might be missing in the smoothed image. However, the improved spatial consistency of the final map compensates for such losses, due to the removal of misclassified pixels that have mixed spectral responses.
 
 \hypertarget{a-bayesian-approach-to-smooth-image-classification-probabilities}{%
 \subsection{A Bayesian approach to smooth image classification probabilities}\label{a-bayesian-approach-to-smooth-image-classification-probabilities}}
 
-We propose a Bayesian approach for post-processing of pixel probabilities. Let \(\pi_{i,k} \geq 0\) be the prior probability of the \(i\)-th pixel belonging to class \(k \in \{1, \ldots, m\}\).
-Converting probabilities to the logit scale allows for less modelling restrictions. Accordingly, let
+We propose a Bayesian approach for post-processing of pixel probabilities. Let \(\pi_{i,k} \geq 0\) be the prior probability of the \(i\)-th pixel belonging to class \(k \in \{1, \ldots, m\}\). Converting probabilities to the logit scale allows for less modelling restrictions. Accordingly, let
 
 \begin{equation} 
 \mu_{i,k} = \log\left( \frac{\pi_{i,k}}{1-\pi_{i,k}} \right) \sim N(m_{i,k}, s^2_{i,k}) 
@@ -217,15 +220,18 @@ By contrast, if we consider local variability to be high If we set \(\sigma^2\) 
 \hypertarget{the-bayeseo-package}{%
 \subsection{The BayesEO package}\label{the-bayeseo-package}}
 
-The post-processing method described in this paper is implemented in the \proglang{R} \pkg{bayesEO}, which is available on CRAN. The examples below also require installation of package \pkg{sitsdata}. Because of its size, c\} cannot be loaded into CRAN; it has to be obtained directly for its github repository, The code below retrieves and loads \pkg{bayesEO} and \pkg{bayesEO}.
+The post-processing method described in this paper is implemented in the \proglang{R} \pkg{bayesEO}, which is available on CRAN and also on github. The examples below also require installation of package \pkg{sitsdata}. Because of its size, they cannot be loaded into CRAN; it has to be obtained directly for its github repository, The code below retrieves and loads \pkg{bayesEO} and \pkg{sitsdata}.
 
 \begin{CodeChunk}
 \begin{CodeInput}
-R> # install packages bayesEO and sitsdata
-R> install.packages(bayesEO)
-R> devtools::install_github("e-sensing/sitsdata")
-R> # load packages
+R> # configuration 
+R> # if bayesEO is not installed, install it
+R> if (!requireNamespace("bayesEO", quietly = TRUE))
++     devtools::install_github("e-sensing/bayesEO")
 R> library(bayesEO)
+R> # if sitsdata is not installed, get it
+R> if (!requireNamespace("sitsdata", quietly = TRUE))
++     devtools::install_github("e-sensing/sitsdata")
 R> library(sitsdata)
 \end{CodeInput}
 \end{CodeChunk}
@@ -235,40 +241,27 @@ R> library(sitsdata)
 
 The input for post-classification is an image with probabilities produced by a machine learning algorithm. This image should be a single file with multiple bands, where each band contains the pixel probabilities of a single class. The file name must have information on reference dates and include a version number. In the examples, we use a file produced by a random forest algorithm applied to a data cube of Sentinel-2 images for tile ``20LLQ'' in the period 2020-06-04 to 2021-08-26. The image has been stored as INT2S data type with integer values between {[}0..10000{]} to represent probabilities ranging from 0 ro 1.
 
-\begin{CodeChunk}
-\begin{CodeInput}
-R> data_dir <- system.file("/extdata/Rondonia-20LLQ/", package = "sitsdata")
-R> probs_file <- list.files(data_dir)
-R> probs_file
-\end{CodeInput}
-\begin{CodeOutput}
-[1] "SENTINEL-2_MSI_20LLQ_2020-06-04_2021-08-26_probs_v1.tif"
-\end{CodeOutput}
-\end{CodeChunk}
-
 The training data has six classes: (a) \code{Forest} for natural tropical forest; (b) \code{Water} for lakes and rivers; (c) \code{Wetlands} for areas where water covers the soil in the wet season; (d) \code{ClearCut_Burn} for areas where fires cleared the land after tree removal. (e) \code{ClearCut_Soil} where the forest has been removed; (f) \code{ClearCut_Veg} where some vegetation remains after most trees have been removed. The class labels should also be informed by the user, since they are not stored in image files.
 
-\begin{CodeChunk}
-\begin{CodeInput}
-R> labels <- c("Water", "ClearCut_Burn", "ClearCut_Soil",
-+             "ClearCut_Veg", "Forest", "Wetland")
-\end{CodeInput}
-\end{CodeChunk}
-
-The following code reads the file using the \code{terra} package.
+The following code reads the file using the \code{terra} package. Figure \ref{fig:pcube} shows the plot of all layers of the probability image. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn}, and \code{ClearCut_Veg} have mostly low values.
 
 \begin{CodeChunk}
 \begin{CodeInput}
-R> probs_image <- terra::rast(paste0(data_dir,"/",probs_file))
-R> names(probs_image) <- labels
-\end{CodeInput}
-\end{CodeChunk}
-
-The output is a \code{SpatRaster} object from the \code{terra} package. Figure \ref{fig:pcube} shows the plot of all layers of the probability image. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn}, and \code{ClearCut_Veg} have mostly low values. Note that we need to inform the \code{scale} parameter that converts the image from a {[}0..10000{]} interval to a {[}0..1{]} range.
-
-\begin{CodeChunk}
-\begin{CodeInput}
-R> bayes_plot(probs_image, scale = 0.0001)
+R> # select the file containing the class probability
+R> data_dir <- system.file("/extdata/Rondonia-20LLQ/", package = "sitsdata")
+R> probs_file <- paste0(
++   data_dir,
++   "SENTINEL-2_MSI_20LLQ_2020-06-04_2021-08-26_probs_v1.tif"
++ )
+R> # set the labels
+R> labels <- c(
++   "Water", "ClearCut_Burn", "ClearCut_Soil",
++   "ClearCut_Veg", "Forest", "Wetland"
++ )
+R> # read the probability image
+R> probs_image <- bayes_read_probs(probs_file, labels)
+R> # plot the probabilities for all classes
+R> bayes_plot_probs(probs_image)
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -280,17 +273,14 @@ R> bayes_plot(probs_image, scale = 0.0001)
 \end{figure}
 \end{CodeChunk}
 
-Figure \ref{fig:map1} shows the resulting map, obtained by taking the class of higher probability to each pixel, without considering the spatial context. The non-smoothed labelled map shows the need for post-processing, since it contains a significant number of outliers and misclassified pixels. The map is produced by \code{bayes_label()} whose parameter is a \code{SpatRaster} object containing the probabilities of each class for all pixels. Then the map is rendered using \code{bayes_map()}.
+Figure \ref{fig:map1} shows the classification map, obtained by taking the class of higher probability to each pixel, without considering the spatial context. The non-smoothed labelled map shows the need for post-processing, since it contains a significant number of outliers and misclassified pixels. The map is produced by \code{bayes_label()} whose parameter is a \code{SpatRaster} object containing the probabilities of each class for all pixels. Then the map is rendered using \code{bayes_plot_map()}.
 
 \begin{CodeChunk}
 \begin{CodeInput}
+R> # produce a labelled map
 R> map_no_smooth <- bayes_label(probs_image)
-\end{CodeInput}
-\end{CodeChunk}
-
-\begin{CodeChunk}
-\begin{CodeInput}
-R> bayes_map(map_no_smooth)
+R> # show the map
+R> bayes_plot_map(map_no_smooth, xmin = 751, xmax = 1500, ymin = 1, ymax = 750)
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -298,11 +288,9 @@ R> bayes_map(map_no_smooth)
 
 }
 
-\caption[Labelled map without smoothing]{Labelled map without smoothing.}\label{fig:map1}
+\caption[Labelled map without smoothing (detail of upper left part)]{Labelled map without smoothing (detail of upper left part).}\label{fig:map1}
 \end{figure}
 \end{CodeChunk}
-
-\newpage
 
 \hypertarget{estimating-the-local-logit-variances}{%
 \subsection{Estimating the local logit variances}\label{estimating-the-local-logit-variances}}
@@ -317,20 +305,20 @@ R> var_image <- bayes_variance(
 R> bayes_summary(var_image)
 \end{CodeInput}
 \begin{CodeOutput}
- Water             ClearCut_Burn      ClearCut_Soil      ClearCut_Veg      
- Min.   : 0.0000   Min.   : 0.00000   Min.   : 0.00000   Min.   : 0.00000  
- 1st Qu.: 0.1669   1st Qu.: 0.06827   1st Qu.: 0.09388   1st Qu.: 0.09845  
- Median : 2.0968   Median : 0.15811   Median : 0.23153   Median : 0.24301  
- Mean   : 2.4812   Mean   : 0.42625   Mean   : 0.83123   Mean   : 0.70456  
- 3rd Qu.: 4.5816   3rd Qu.: 0.34956   3rd Qu.: 0.63797   3rd Qu.: 0.73279  
- Max.   :25.0916   Max.   :12.44700   Max.   :12.98767   Max.   :18.21636  
+ Water            ClearCut_Burn      ClearCut_Soil      ClearCut_Veg      
+ Min.   : 0.000   Min.   : 0.00000   Min.   : 0.00000   Min.   : 0.00000  
+ 1st Qu.: 0.162   1st Qu.: 0.06972   1st Qu.: 0.09643   1st Qu.: 0.09674  
+ Median : 2.235   Median : 0.15967   Median : 0.23739   Median : 0.23686  
+ Mean   : 2.518   Mean   : 0.43250   Mean   : 0.84161   Mean   : 0.68510  
+ 3rd Qu.: 4.655   3rd Qu.: 0.35117   3rd Qu.: 0.64401   3rd Qu.: 0.70521  
+ Max.   :29.235   Max.   :10.38304   Max.   :12.85948   Max.   :19.59763  
  Forest            Wetland           
  Min.   : 0.0000   Min.   : 0.00000  
- 1st Qu.: 0.1110   1st Qu.: 0.07215  
- Median : 0.4453   Median : 0.17772  
- Mean   : 1.5953   Mean   : 0.69935  
- 3rd Qu.: 2.3659   3rd Qu.: 0.42117  
- Max.   :26.2467   Max.   :13.94576  
+ 1st Qu.: 0.1073   1st Qu.: 0.07247  
+ Median : 0.4321   Median : 0.17898  
+ Mean   : 1.5852   Mean   : 0.71562  
+ 3rd Qu.: 2.3197   3rd Qu.: 0.42963  
+ Max.   :26.2467   Max.   :10.79967  
 \end{CodeOutput}
 \end{CodeChunk}
 
@@ -344,7 +332,11 @@ The summary statistics show that most local variance values are low, which is an
 
 \begin{CodeChunk}
 \begin{CodeInput}
-R> bayes_plot(var_image, quantile = 0.75, labels = c("ClearCut_Soil", "Forest"))
+R> bayes_plot_var(var_image,
++   quantile = 0.75,
++   palette = "Greens",
++   labels = c("ClearCut_Soil", "Forest")
++ )
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -356,13 +348,13 @@ R> bayes_plot(var_image, quantile = 0.75, labels = c("ClearCut_Soil", "Forest"))
 \end{figure}
 \end{CodeChunk}
 
-Comparing the logit variance maps of Figure \ref{fig:vcube} with the probability maps of Figure \ref{fig:pcube} emphasizes the relevance of expert knowledge. The areas of high probability of class \code{Forest} are mostly made of compact patches; areas of high local variance occur near the borders of these patches. By contrast, class \code{ClearCut_Veg} represents a transition between natural forest areas and places where all trees have been cut, which are associated to class \code{ClearCut_Soil}. Class \code{ClearCut_Veg} has a high spectral variability, since the extent of remaining vegetation after most trees have been removed is not uniform. For this reason, the local variance of class \code{ClearCut_Veg} is mostly patch-based, while that of class \code{Forest} is mostly border-based.
+Comparing the logit variance maps of Figure \ref{fig:vcube} with the probability maps of Figure \ref{fig:pcube} emphasizes the relevance of expert knowledge. The areas of high probability of class \code{Forest} are mostly made of compact patches. However, there are areas of high local variance inside these patches, due to natural variation of the forest and also resulting from forest degradatio. By contrast, class \code{ClearCut_Veg} represents a transition between natural forest areas and places where all trees have been cut, which are associated to class \code{ClearCut_Soil}. Class \code{ClearCut_Veg} has a high spectral variability, since the extent of remaining vegetation after most trees have been removed is not uniform. For this reason, many areas of high local variance of class \code{ClearCut_Veg} are located in the borders between homogenous areas.
 
 Further insights are provided by Figure \ref{fig:vhist}, which shows the histograms of local variances per class. The values shown correspond to the \(4^{th}\) quartile (top 25\% of all values). The distribution of logit variances is uneven between the classes. Class \code{ClearCut_Veg} has a more balanced distribution, while most values in the \(4^{th}\) quartile of class \code{ClearCut_Soil} have low values.
 
 \begin{CodeChunk}
 \begin{CodeInput}
-R> bayes_hist(var_image, quantile = 0.75)
+R> bayes_plot_hist(var_image, quantile = 0.75)
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -381,10 +373,18 @@ As discussed above, the effect of the Bayesian estimator depends on the values o
 
 \begin{CodeChunk}
 \begin{CodeInput}
+R> # smoothness values correspond to labels 
+R> labels <- c("Water", "ClearCut_Burn", "ClearCut_Soil",
++             "ClearCut_Veg", "Forest", "Wetland")
 R> smooth_high <- bayes_smooth(
 +     probs_image,
 +     window_size = 7,
-+     smoothness = c(25, 10, 20, 20, 25, 10)
++     smoothness = c("Water" = 25, 
++                    "ClearCut_Burn" = 10, 
++                    "ClearCut_Soil" = 20, 
++                    "ClearCut_Veg" =  20, 
++                    "Forest" = 25, 
++                    "Wetland" = 10)
 + )
 \end{CodeInput}
 \end{CodeChunk}
@@ -394,7 +394,7 @@ The impact of Bayesian smoothing can be best captured by producing a labelled ma
 \begin{CodeChunk}
 \begin{CodeInput}
 R> map_smooth_high <- bayes_label(smooth_high)
-R> bayes_map(map_smooth_high)
+R> bayes_plot_map(map_smooth_high, xmin = 751, xmax = 1500, ymin = 1, ymax = 750)
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -423,7 +423,7 @@ To see the impact of small \(\sigma^2\), we compute the labeled map.
 \begin{CodeChunk}
 \begin{CodeInput}
 R> map_smooth_low <- bayes_label(smooth_low)
-R> bayes_map(map_smooth_low)
+R> bayes_plot_map(map_smooth_low, xmin = 751, xmax = 1500, ymin = 1, ymax = 750)
 \end{CodeInput}
 \begin{figure}[h]
 
@@ -461,8 +461,6 @@ R> dplyr::inner_join(sum1, sum2, by = "class") |>
 \end{CodeOutput}
 \end{CodeChunk}
 
-\newpage
-
 \hypertarget{relevance-of-expert-knowledge-in-bayesian-inference}{%
 \subsection{Relevance of expert knowledge in Bayesian inference}\label{relevance-of-expert-knowledge-in-bayesian-inference}}
 
@@ -484,6 +482,37 @@ Consider the case of forest areas and watersheds. If an expert wishes to have co
 
 \hypertarget{comparison-with-other-methods}{%
 \section{Comparison with other methods}\label{comparison-with-other-methods}}
+
+To better understand the benefits of Bayesian smoothing, in this section we present the results of post-processing using two alternatives: Gaussian smoothing and bilateral smoothing. Gaussian smoothing is a low-pass filter where the weights are based on the normal distribution. Pixels near the center of the kernel have a higher weight, and the weight decreases for pixels further away from the center. This creates a blurring effect that is stronger at the center and weaker at the edges. The extent of smoothing is controlled by the standard deviation of a Gaussian distribution. The convolution operation effectively averages pixel values in the neighborhood defined by the kernel, with weights given by the Gaussian distribution. This results in a reduction of high-frequency noise and a blurring effect.
+
+The Gaussian Kernel is expressed as
+\begin{equation}
+   G(x, y) = \frac{1}{2\pi\sigma^2} e^{-\frac{x^2 + y^2}{2\sigma^2}}
+\end{equation}
+where \(\sigma\) is the standard deviation of the Gaussian distribution. The convolution for Gaussian smoothing is expressed as
+
+\begin{equation}
+   I'(x, y) = \sum_{i=-k}^{k} \sum_{j=-k}^{k} G(i, j) \cdot I(x - i, y - j)
+\end{equation}
+
+In this equation, \(I'(x, y)\) represents the smoothed image, \(I(x, y)\) is the original image, \(G(i, j)\) is the Gaussian kernel, and \((i,j)\) are the indices running over the kernel size, typically centered around zero.
+
+Bilateral smoothing aims to reduce noise while preserving edges. Unlike the Gaussian filter, which can blur edges, the bilateral filter maintains sharp edges by taking into account the difference in intensity values between pixels \citep{Tomasi1998}. Bilateral filtering combines a spatial filter, like the Gaussian filter, which considers the spatial closeness of pixels, with a range filter, which considers the similarity in intensity values between pixels. By considering intensity differences, the bilateral filter can preserve edges.
+
+The bilateral filter has two main parameters: (a) the spatial parameter \(\sigma\) controls the spatial extent of the kernel; (b) the range parameter \(\tau\) controls how much a pixel must differ in intensity for it to be considered different. Its mathematical expression is
+
+\begin{equation}
+I'(x, y) = \frac{1}{W(x, y)} \sum_{i=-k}^{k} \sum_{j=-k}^{k} I(x + i, y + j) \cdot G_{\sigma}(i, j) \cdot G_{\tau}(I(x + i, y + j) - I(x, y))
+\end{equation}
+
+where \(I'(x,y)\) is the filtered image and \(I(x,y)\) is the original image. \(G_{\sigma}(i, j)\) is the spatial Gaussian function, which decreases with distance from the central pixel, controlled by the spatial standard deviation \(\sigma\). \(G_{\tau}(I(x + i, y + j) - I(x, y))\) is the range Gaussian function, which decreases with the intensity difference between the neighboring pixel and the central pixel controlled by the range standard deviation \(\tau\).
+
+\(W(x, y)\) is a normalization factor defined as
+\begin{equation}
+W(x, y) = \sum_{i=-k}^{k} \sum_{j=-k}^{k} G_{\sigma_s}(i, j) \cdot G_{\sigma_r}(I(x + i, y + j) - I(x, y))
+\end{equation}
+
+This formula illustrates how the bilateral filter considers both spatial proximity and intensity similarity in its smoothing process, thereby preserving edges while reducing noise in other areas.
 
 \renewcommand\refname{Conclusion}
 \bibliography{e-sensing.bib}
